<!--
  ~     Copyright (C) 2020  Marek Materzok
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_song"
        android:title="@string/add_song"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_white_24dp"
        />
    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sortByTitle"
                android:title="@string/sort_by_title"/>
            <item
                android:id="@+id/sortByArtist"
                android:title="@string/sort_by_artist"/>
            <item
                android:id="@+id/sortByAlbumName"
                android:title="@string/sort_by_album_name"/>
            <item
                android:id="@+id/sortByAlbumYear"
                android:title="@string/sort_by_album_year"/>
        </menu>
    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings_white_24dp"
        />
</menu>