<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2021  Marek Materzok
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/play"
        app:srcCompat="@android:drawable/ic_media_pause" />

    <ImageButton
        android:id="@+id/repStartButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/big_padding"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/repeater_start"
        app:srcCompat="@drawable/ic_left_repeat_24" />

    <ImageButton
        android:id="@+id/repEndButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/big_padding"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/repeater_end"
        app:srcCompat="@drawable/ic_right_repeat_24" />

    <SeekBar
        android:id="@+id/speedBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:layout_margin="@dimen/big_padding"
        android:visibility="invisible" />

</LinearLayout>